--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.14.1",
     "next": "^16.0.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
